tests/fixtures/invalid/float_div_bytes.py
# Cannot divide Float and Bytes
x: float = 1.0 / b"hello"
